--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "vendors/facebook_php_sdk"]
 	path = vendors/facebook_php_sdk
 	url = git://github.com/mikesmullin/php-sdk.git
+[submodule "vendors/php_facebook_sdk"]
+	path = vendors/php_facebook_sdk
+	url = https://github.com/facebook/php-sdk.git
